--- a/MedData/wear/src/main/AndroidManifest.xml
+++ b/MedData/wear/src/main/AndroidManifest.xml
@@ -5,11 +5,22 @@
     <uses-feature android:name="android.hardware.type.watch" />
 
     <application
+        android:name="com.android.meddata.Application.MobileApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/MyMaterialTheme"   >
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <service android:name="com.android.meddata.MessageAPI.ListenerService">
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
+            </intent-filter>
+        </service>
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
