--- a/MedData/wear/build.gradle
+++ b/MedData/wear/build.gradle
@@ -18,7 +18,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets { main { res.srcDirs = ['src/main/res', 'src/main/res/hdpi'] } }
+    sourceSets { main { res.srcDirs = ['src/main/res', 'src/main/res/hdpi', 'src/main/res/xml'] } }
 }
 
 dependencies {
